# omym2

./: .gitignore  AGENTS.md  ARCHITECTURE.md  MANIFEST.in  OMYM2_REACT_WEB_UI_RENEWAL_PLAN.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PLAN.md  README.md  ROADMAP.md  WORKFLOW.md  pyproject.toml  vercel.json
.agents/skills/: README.md
.codex/: config.toml  hooks.json
.codex/agents/: coder.toml  contract-check.toml  explorer.toml  patch-spark.toml  reviewer.toml  risk-review.toml  scanner.toml  scout.toml  test-triage.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  docs.yml  implementation.yml
.github/workflows/: ci.yml  release.yml
.symphony/: WORKFLOW.md
assets/desktop/: windows_version_info.txt
docs/: BENCHMARKS.md  COMMANDS.md  DEVELOPMENT.md  DOMAIN.md  PRODUCT.md  STORAGE.md  SUBAGENTS.md  TESTING.md  WORK_TRACKING.md  commands.md  development.md  domain.md  execution.md  implementation_plan.md  index.md  mvp.md  product.md  storage.md  testing.md
docs/agent/: local_llm_review_prompt.md  subagents.md
docs/architecture/: index.md  naming.md
docs/archive/: omym2_design_document_v1.01.md
docs/codebase/: dependency-boundaries.md  index.md  naming.md  ports-uow.md  source-layout.md  web-frontend.md
docs/contracts/: config.md  db-schema.md  index.md  operations.md  path-identity-storage.md  status-reason-catalog.md  web-api.md
docs/decisions/: .gitkeep  0001-breaking-bundled-web-api.md  0002-durable-operations-over-polling.md  0003-cross-process-exclusive-operation-lock.md  0004-windows-desktop-application.md  README.md  index.md
docs/development/: benchmarks.md  desktop-packaging.md  harness.md  index.md  testing.md
docs/execution/: add.md  apply.md  check.md  failure-policy.md  index.md  model.md  organize.md  refresh.md  undo.md
docs/okf/: index.md
docs/process/: work-tracking.md
scripts/: __init__.py  ask_local_llm.py  audit_web_packages.py  audit_web_static.py  benchmark_pipeline.py  build_web_evidence.py  check_output.py  checks.sh  ci_scope.py  codex_stop_hook.py  config.py  docs_catalog.py  eval_docs_router.py  export_web_openapi.py  generate_docs_indexes.py  local_repo_agent.py  prepare_release_artifacts.py  review_with_local_llm.py  route_docs.py  run_web_test_server.py  search_docs.py  smoke_installed_web.py  smoke_web_wheel.py  sync_web_static.py
src/omym2/: __init__.py  (+2 more)
tests/: __init__.py  test_packaging_metadata.py
web/: .gitignore  .prettierignore  eslint.config.js  eslint.config.mjs  index.html  next.config.mjs  openapi.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  prettier.config.mjs  tsconfig.app.json  tsconfig.e2e.json  tsconfig.node.json  vercel.json  vite.config.ts  vitest.config.ts
web-v2/: .prettierignore  eslint.config.js  index.html  openapi-ts.config.ts  openapi.json  package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+826 files in other folders)
