[project]
name = "omym2"
version = "0.1.0"
description = "OMYM2 is a local tool for safely importing music files into an organized library."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mutagen>=1.47.0",
]

[build-system]
requires = ["setuptools>=61.0"]

[tool.setuptools.package-dir]
"" = "src"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "basedpyright>=1.39.8",
    "ruff>=0.15.18",
]

[tool.ruff]
target-version = "py314"
output-format = "concise"
line-length = 120
extend-exclude = ["build/", "dist/"]

format.line-ending = "lf"

lint.select = ["ALL"]
lint.ignore = [
  "ANN", "D", "COM812", "ISC001", "E501",
  "Q000", "Q001", "Q002", "Q003", "W191"
]
lint.unfixable = ["F401", "F841"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "S101",
]

[tool.basedpyright]
pythonVersion = "3.14"
include = ["src"]
exclude = ["**/__pycache__"]
stubPath = ""
typeCheckingMode = "recommended"
