[project]
name = "omym2"
version = "0.1.0"
description = "OMYM2 is a local tool for safely importing music files into an organized library."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.0",
    "mutagen>=1.47.0",
    "pydantic>=2.13.4",
    "uvicorn>=0.49.0",
]

[project.optional-dependencies]
desktop = [
    "pywebview==6.2.1; sys_platform == 'win32'",
]

[project.scripts]
omym2 = "omym2.platform.cli_entry_point:main"

[project.gui-scripts]
omym2-desktop = "omym2.platform.desktop_entry_point:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"omym2.adapters.db.sqlite.migrations" = ["*.sql"]
"omym2.adapters.web" = ["static_dist/*", "static_dist/**/*"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "basedpyright>=1.39.8",
    "ruff>=0.15.18",
    "httpx2>=2.4.0",
]
desktop-build = [
    "pyinstaller==6.21.0",
]

[tool.ruff]
target-version = "py314"
output-format = "concise"
line-length = 120
extend-exclude = ["build/", "dist/"]

format.line-ending = "lf"

lint.select = ["ALL"]
lint.ignore = [
  "ANN", "D", "COM812", "ISC001", "E501",
  "Q000", "Q001", "Q002", "Q003", "W191"
]
lint.unfixable = ["F401", "F841"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "S101",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.basedpyright]
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
include = ["src", "tests", "scripts"]
exclude = ["**/__pycache__"]
stubPath = ""
typeCheckingMode = "recommended"
executionEnvironments = [
  { root = "scripts", extraPaths = ["src", "scripts"] },
]
